# nexus

./: .dockerignore  .env.production.example  .gitignore  ARCHITECTURE.md  Caddyfile  DEPLOY.md  Dockerfile  HISTORY.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-server.yml  release-desktop.yml
docs/: BEP-nexus.md  CICD.md  RELEASING.md  Rune_Protocol_Architecture.docx  rune_wallet_architecture.docx
docs/concepts/: abc.md  data-flow.md  dpm.md  identity.md  modes.md
docs/design/: bep-v0.2.md  falsifiable-evolution.md  recursive-projection.md
docs/how-to/: add-a-contract-rule.md  add-a-tool.md
scripts/: deploy_setup.sh  generate_self_signed_cert.sh  run_prod_locally.sh  setup_letsencrypt.sh  watch_brain.py
scripts/ci/: smoke_test.py
scripts/deploy/: vps_deploy.sh
