[project]
name = "rune-protocol"
version = "0.1.0"
description = "Self-evolving AI agents with on-chain identity — monorepo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/sdk", "packages/nexus", "packages/server"]

[tool.uv.sources]
nexus-core = { workspace = true }
nexus = { workspace = true }
